Rework html render

--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -23,8 +23,7 @@
       {% include 'includes/header.html' %}      
     </header>
     <main>
-        {% block content %}
-        {% endblock %}
+        <h1>{{ text }}</h1>
     </main>
     <footer class="page-footer font-small blue border-top">
         {% include 'includes/footer.html' %}
