Add render group posts

--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -24,7 +24,8 @@
       {% include 'includes/header.html' %}      
     </header>
     <main>
-        <h1>{{ text }}</h1>
+        {% block content %}
+        {% endblock %}
     </main>
     <footer class="page-footer font-small blue border-top">
         {% include 'includes/footer.html' %}
