--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -2,3 +2,26 @@
 {% block title %}
   Последние обновления на сайте
 {% endblock %}
+{% block content %}
+<div class="container">        
+  <h1>Последние обновления на сайте</h1>
+  {% for post in posts %}
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date }}
+      </li>
+    </ul> 
+    <p>{{ post.text }}</p>
+    
+    <a href="group_list.html">все записи группы</a>
+  </article>
+  {% if not forloop.last %} 
+    <hr>
+  {% endif %}
+  {% endfor %}
+</div>  
+{% endblock %}
