Add link to group from post

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -16,8 +16,9 @@
       </li>
     </ul> 
     <p>{{ post.text }}</p>
-    
-    <a href="group_list.html">все записи группы</a>
+    {% if post.group %}   
+      <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
+    {% endif %} 
   </article>
   {% if not forloop.last %} 
     <hr>
