--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -17,7 +17,7 @@
     </ul> 
     <p>{{ post.text }}</p>
     {% if post.group %}   
-      <a href="{% url 'posts:group_posts' post.group.slug %}">все записи группы</a>
+      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
     {% endif %} 
   </article>
   {% if not forloop.last %} 
